
Version 7.4.0 - DEV
-------------------
 - Compilation of submissions now happens inside the chroot.
 - Improve performance with large amounts of affiliations.
 - Search for @EXPECTED_RESULTS@ marker in all submitted files
   to validate test submissions.
 - Allow users to specify their full name in self-registration.
 - Add metrics API endpoint for use with Prometheus.
 - Upgrade bundled libraries.

Version 7.3.0 - 26 June 2020
----------------------------
 - Move specification of database configuration out of database and into
   a YAML file. Also show select boxes when appropriate.
 - Rename team.externalid to team.icpcid, since it is not an external ID in
   the sense the other ones are.
 - Add team display name support.
 - Add support for importing teams, organizations and groups using JSON.
 - Add script dj_judgehost_cleanup for maintenance on judgehosts.
 - Team manual source is now RestructeredText.
 - Log out an active user whose password is changed, and updates to the
   roles of a logged in user are effective immediately.
 - Allow to "delete" testcases even with associated judgings.
 - Fix permissions on webapp/var/* by using group setsid bit.
 - Allow public and team to view submissions, awards and clarifications
   using the API.
 - Allow users with API_READER role to fetch inactive contests
 - Drop smart renaming for Java public classes.
 - Show browser notifications also for new balloons to be handed out.
 - Add option to allow teams to download their own submission.
 - Change shadow import to read data from a configuration file and store
   a copy of the feed.
 - Pin scoreboard header to top when scrolling page.
 - Add console command to reset the password of any user.
 - Many code cleanups, improvements and tests.
 - Upgrade Symfony to 4.4 LTS and upgrade other library dependencies.

Version 7.2.1 - 6 May 2020
--------------------------
 - Various documentation fixes and improvements.
 - Fix filtering balloons by affiliation (Thanks Michael Baer).