@@ -5,6 +5,12 @@ body {
     background-color: var(--background-color);
     font-family: Roboto, sans-serif;
     padding-bottom: 4em;
+    padding-top: 4.5rem;
+}
+
+/* has no menu */
+body.static {
+    padding-top: 1rem;
 }
 
 /* menu */
@@ -332,7 +338,7 @@ tr.ignore td, td.ignore, span.ignore {
     width: 98%;
     height: auto;
     display: block;
-    margin: -3rem auto 3rem auto;
+    margin-bottom: 2rem;
 }
 
 #teampicture {
